# jigsaw

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  mkdocs.yml  noxfile.py  plugin.schema.json  pyproject.toml  setup.py
.github/workflows/: nox.yaml
docs/: Makefile  conf.py  index.rst  jigsaw.rst  make.bat  modules.rst  plugin.json.rst
docs/reference/: jigsawplugin.md  pluginloader.md
example/: Example_Program.py
example/plugins/example_plugin/: __init__.py  plugin.json  plugin.toml
jigsaw/: Plugin.py  PluginLoader.py  __init__.py  plugin.py  plugin_loader.py  types.py
plugins/test_plugin/: __init__.py  plugin.json
tests/: test_jigsaw.py
tests/plugins/BasicTest/: plugin.json  plugin.toml
tests/plugins/DependencyTest/: __init__.py  plugin.json  plugin.toml
tests/plugins/ErrorTest/: __init__.py  plugin.json  plugin.toml
tests/plugins/InvalidBaseclassTest/: __init__.py  plugin.json  plugin.toml
tests/plugins/InvalidManifestTest/: plugin.json  plugin.toml
tests/plugins/MissingDependencyTest/: plugin.json  plugin.toml
