[tool.poetry]
name = "jigsaw"
version = "3.2.0"
description = "A plugin framework"
authors = ["Riley Flynn <riley@rileyflynn.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tomli = "^2.0.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
nox-poetry = "^1.0.0"
nox = "^2022.1.7"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^8.5.3"
mkdocstrings = { version = "^0.19.0", extras = ["python"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
